packages/ui/tests/fixtures/negative/raw-network.fixture.ts
import "axios";

void fetch;
void WebSocket;
